RESOLVED FIXED48370
REGRESSION (r70540): Many transforms/3d tests are failing on the XP bots
https://bugs.webkit.org/show_bug.cgi?id=48370
Summary REGRESSION (r70540): Many transforms/3d tests are failing on the XP bots
Adam Roben (:aroben)
Reported 2010-10-26 13:36:49 PDT
REGRESSION (r70540): Many transforms/3d tests are failing on the XP bots
Attachments
Patch (3.83 KB, patch)
2010-10-26 13:37 PDT, Adam Roben (:aroben)
darin: review+
Adam Roben (:aroben)
Comment 1 2010-10-26 13:37:43 PDT
Adam Roben (:aroben)
Comment 2 2010-10-26 14:01:24 PDT
Note You need to log in before you can comment on or make changes to this bug.